[tool.poetry]
name = "equationtracer"
version = "1.0.2"
description = "Uses Discrete Fourier Transform to Turn Scribbles into Equations!"
authors = ["Ying Liqian <jamesylq@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.5.2"
numpy = "^1.26.2"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trace-equation = "equationtracer.main:main"